Swagger complete
