# controllers/employees.controller.js
@@ -4,6 +4,7 @@ const bcrypt = require("bcrypt");
 const mysqlConnection = require("../database");
 const jwt = require("jsonwebtoken");
 const { CreateEmployee } = require("../schemas/EmployeeValidationSchema");
+const { INTEGER } = require("sequelize");
 
 const createEmployee = async (req, res) => {
   try {
@@ -28,11 +29,20 @@ const getAllEmployees = async (req, res) => {
     return res.status(500).json({ message: "Server error" });
   }
 };
+const getTotalEmployees = async (req, res) => {
+  try {
+    const totalEmployees = await Employee.count();
+    return res.status(200).json({ totalEmployees });
+  } catch (error) {
+    console.log(error);
+    return res.status(500).json({ message: "Server error" });
+  }
+};
 
 const getEmployeeById = async (req, res) => {
   try {
-    const id = req.params;
-    const employee = await Employee.findOne(id);
+    const {id} = req.params;
+    const employee = await Employee.findByPk(id);
     console.log(employee);
     if (employee) {
       return res.json(employee);
@@ -46,33 +56,48 @@ const getEmployeeById = async (req, res) => {
 
 const updateEmployee = async (req, res) => {
   try {
-    const id = req.params;
-    const { FirstName, LastName, National_id, Telephone, Email, Department, Position, Laptop_manufacturer, Model, Serial_number } = req.body;
-    const employee = await Employee.findOne(id);
+    const {id} = req.params;
+   
+    const {firstName, lastName, national_id, telephone, email, department, position, laptop_manufacturer, model, serial_number} = await CreateEmployee.validateAsync(req.body);
+    const employee = await Employee.findByPk(id);
+    console.log(employee);
     if (employee) {
       await employee.update({
-        FirstName, LastName, National_id, Telephone, Email, Department, Position, Laptop_manufacturer, Model, Serial_number
+        firstName,
+        lastName,
+        national_id,
+        telephone,
+        email,
+        department,
+        position,
+        laptop_manufacturer,
+        model,
+        serial_number
       });
-      return res.json({ message: "Employee updated successfully", Employee });
+      return res.status(200).json({ message: "Employee updated successfully", Employee: employee });
     } else {
       return res.status(404).json({ message: "Employee not found" });
     }
   } catch (error) {
+    console.log(error);
     return res.status(500).json({ message: "Server error" });
   }
 };
 
 const deleteEmployeeById = async (req, res) => {
   try {
-    const id = req.params;
-    const employee = await Employee.findOne(id);
+    const {id} = req.params;
+    console.log("My id===>", id);
+    const employee = await Employee.findByPk(id);
+    console.log(employee);
     if (employee) {
       await employee.destroy();
-      res.status(200).json({ message: "Successfully deleted the Employee" });
+      return res.status(200).json({ message: "Successfully deleted the Employee" });
     } else {
       return res.status(404).json({ message: "That Employee doesn't exist" });
     }
   } catch (error) {
+    console.log(error); 
     return res.status(500).json({ message: "Server error" });
   }
 };
@@ -116,6 +141,7 @@ module.exports = {
   getEmployeeById,
   deleteEmployeeById,
   updateEmployee,
+  getTotalEmployees,
   EmployeeLogin,
   getEmployeeProfile,
 };
