# routes/index.js
@@ -5,7 +5,21 @@ const employeeRoutes = require("./employee.routes");
 const userRoutes = require("./user.routes");
 const isAuthenticated = require("../middlewares/isAuthenticated");
 
-router.use("/employees", isAuthenticated, employeeRoutes);
-router.use("/users", userRoutes);
+router.use("/employees", isAuthenticated, employeeRoutes
+    /*
+#swagger.tags = ['Employee']
+#swagger.security = [{
+    "bearerAuth": []
+    }] 
+    */
+);
+router.use("/users", userRoutes
+    /*
+#swagger.tags = ['User']
+#swagger.security = [{
+    "bearerAuth": []
+    }] 
+    */
+);
 
 module.exports = router;
