# swagger.json
@@ -169,7 +169,103 @@
                     }
                 }
             }
+        },
+        "/employees/update/:id":{
+            "put": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Update Employee",
+                "description": "Update employee",
+                "operationId": "updateEmployee",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "security": [{
+                    "bearerAuth": "[]"
+                }], 
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Employee object that needs to be updated",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Employee"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Employee"
+                        }
+                    }
+                }
+            }
+
+        },
+        "/employees/delete/:id":{
+            "delete": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Delete Employee",
+                "description": "Delete employee",
+                "operationId": "deleteEmployee",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "security": [{
+                    "bearerAuth": "[]"
+                }], 
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Employee"
+                        }
+                    }
+                }
+            }
+
+        },
+        "/employees/:id":{
+            "get": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Get Employee",
+                "description": "Get employee",
+                "operationId": "getEmployee",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "security": [{
+                    "bearerAuth": "[]"
+                }], 
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Employee"
+                        }
+                    }
+                }
+            }
+        
         }
+
     
     },
     "definitions": {
